Fixed broken style on MD Search Box

--- a/client/imports/ui/md-search-box/md-search-box.styl
+++ b/client/imports/ui/md-search-box/md-search-box.styl
@@ -21,7 +21,6 @@
   margin 0
 .md-search-box__input
   margin 0 0 0 1.25rem
-.md-item.md-search-box__history-item
-  padding 0 0.75rem
+.md-item.md-search-box__history-item,
 .md-item.md-search-box__suggestion-item
   padding 0 0.75rem 0 4.25rem
